<resources>
    <string name="app_name">chatAndroid</string>
    <string name="login_username">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btn">Login</string>
    <string name="chat_logo">Chat</string>
    <string name="register_btn">Sign Up</string>
    <string name="chatbtn">chat Button</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_username">Username</string>
    <string name="btnsubmit">Submit</string>
    <string name="btnImg">Select Image</string>
    <string name="login_etPasswordValidation">Confirm password</string>
    <string name="BtnSave">Save</string>
    <string name="BaseUrl">"http://10.0.2.2:7061/ "</string>
    <string name="textViewName">" "</string>
    <string name="welcome">Welcome!</string>
    <string name="username">UserName</string>
    <string name="nickname">NickName</string>
    <string name="server">Server</string>
    <string name="settings_logo">Settings</string>
    <string name="server_ad">Server address</string>
    <string name="messageHint">Type your Message..</string>
    <string name="BtnSend">Send</string>



</resources>